vlib/v/checker/tests/unknown_array_fn_type_in_struct_field.vv
struct Virt {
	fns [2]fn (num u32) UnknownThing
}

fn (virt Virt) caller() {
	func := virt.fns[0]
	func(5)
}

fn main() {}
